@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.19157 2019/07/31 18:34:10 brook Exp $
+$NetBSD: TODO,v 1.19158 2019/07/31 19:29:34 brook Exp $
 
 Suggested new packages
 ======================
@@ -408,7 +408,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o PAM-0.99.7.1
 	o Pantomime-1.2.2
 	o R-akima-11
-	o R-gdata-2.17.0
 	o R-httpRequest-0.0.10
 	o R-mapproj-3
 	o R-maps-3.1.0
