@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.12 2018/08/22 09:45:35 wiz Exp $
+# $NetBSD: Makefile,v 1.13 2019/07/31 19:29:34 brook Exp $
 
-PKGREVISION=	6
-CATEGORIES=	math
+CATEGORIES=	math R
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	${R_HOMEPAGE_BASE}/gdata/
@@ -9,12 +8,13 @@ COMMENT=	Various R programming tools for data manipulation
 LICENSE=	gnu-gpl-v2
 
 R_PKGNAME=	gdata
-R_PKGVER=	2.8.2
+R_PKGVER=	2.18.0
 
-DEPENDS+=	R-gtools>=2.6.2:../../math/R-gtools
+DEPENDS+=	R-gtools>=3.5.0:../../math/R-gtools
 
 USE_TOOLS+=	perl:run
 REPLACE_PERL+=	inst/bin/*.bat inst/perl/*.pl
+USE_LANGUAGES=	# none
 
 .include "../../math/R/Makefile.extension"
 .include "../../mk/bsd.pkg.mk"
