@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.3171 2019/07/31 19:25:41 brook Exp $
+$NetBSD: CHANGES-2019,v 1.3172 2019/07/31 19:29:34 brook Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -5128,3 +5128,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Updated math/R-e1071 to 1.7.2 [brook 2019-07-31]
 	Updated math/R-emdbook to 1.3.11 [brook 2019-07-31]
 	Updated math/R-forecast to 8.7 [brook 2019-07-31]
+	Updated math/R-gdata to 2.18.0 [brook 2019-07-31]
